--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
 	left: 50%;
 	transform: translateX(-50%);
 	bottom: 4vh;
+	text-decoration : none; color : #000000;
 }
 
 .hoverboard {
@@ -69,11 +70,35 @@ body {
 }
 
 .paved {
-	padding-top: 40vh;
+	padding-top: 15vh;
 }
 
 #leavepics {
 	padding-top: 10vh;
 	text-align: center;
-	margin-bottom: 100vh;
+}
+
+.leavepic {
+	margin: 2vw;
+	border-radius: 25px;
+}
+
+#intro {
+	width: 100vw;
+	height: 120vh;
+}
+
+#pave {
+	width: 100vw;
+	height: 120vh;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.text {
+	text-align: center;
+	font-size: 3vh;
+	width: 50vw;
 }
