--- a/style.css
+++ b/style.css
@@ -86,8 +86,6 @@ a {
 }
 
 .column {
-	flex: 25%;
-	max-width: 25%;
 	padding: 0 0px;
 }
 
@@ -186,16 +184,23 @@ a {
 	font-size: 0px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-aspect-ratio: 1/3) {
+	.column {
+		flex: 100%;
+		max-width: 100%;
+	}
+}
+
+@media screen and (min-aspect-ratio: 1/2) {
 	.column {
 		flex: 50%;
 		max-width: 50%;
 	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-aspect-ratio: 1/1) {
 	.column {
-		flex: 100%;
-		max-width: 100%;
+		flex: 25%;
+		max-width: 25%;
 	}
 }
